--- a/GSAP_DAY_01_Basic_Of_Animations/project/style.css
+++ b/GSAP_DAY_01_Basic_Of_Animations/project/style.css
@@ -7,6 +7,8 @@ html,body{
     width: 100%;
     height: 100%;
     padding: 5px;
+    background-color: black;
+    color: white;
 }
 #nav{
     display: flex;
